--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "@types/socket.io": "^3.0.2",
     "rxjs": "~6.6.0",
+    "socket.io": "^4.5.1",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
