--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.1.2",
-    "@angular/cdk": "^13.3.9",
+    "@angular/cdk": "^14.1.2",
     "@angular/common": "^14.1.2",
     "@angular/compiler": "^14.1.2",
     "@angular/core": "^14.1.2",
     "@angular/forms": "^14.1.2",
-    "@angular/material": "^13.3.9",
+    "@angular/material": "^14.1.2",
     "@angular/platform-browser": "^14.1.2",
     "@angular/platform-browser-dynamic": "^14.1.2",
     "@angular/router": "^14.1.2",
     "@types/socket.io": "^3.0.2",
-    "rxjs": "~6.6.0",
+    "ngx-socket-io": "^4.3.0",
+    "rxjs": "^7.5.6",
     "socket.io": "^4.5.1",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
