--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,13 @@
 antlr4-python3-runtime==4.10
+async-timeout==4.0.2
 bidict==0.22.0
 click==8.1.3
+Deprecated==1.2.13
+dnspython==2.2.1
+eventlet==0.33.1
 Flask==2.1.2
 Flask-SocketIO==5.2.0
+greenlet==1.1.2
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -27,6 +32,9 @@ python-engineio==4.3.4
 python-socketio==5.7.1
 python3-xlib==0.15
 pytweening==1.0.4
+redis==4.3.4
+six==1.16.0
 typer==0.4.1
 Werkzeug==2.1.2
+wrapt==1.14.1
 zipp==3.8.0
