--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 altgraph==0.17.3
+amqp==5.1.1
 antlr4-python3-runtime==4.10
 async-timeout==4.0.2
 bidict==0.22.0
@@ -14,6 +15,7 @@ importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 keyboard==0.13.5
+kombu==5.2.4
 MarkupSafe==2.1.1
 mouse==0.7.1
 MouseInfo==0.1.3
@@ -39,10 +41,10 @@ python-engineio==4.3.4
 python-socketio==5.7.1
 python3-xlib==0.15
 pytweening==1.0.4
-redis==4.3.4
 six==1.16.0
 tomli==2.0.1
 typer==0.4.1
+vine==5.0.0
 Werkzeug==2.1.2
 wrapt==1.14.1
 zipp==3.8.0
